Uplift code base to java21
Issue-ID: POLICY-5466
Change-Id: I297717a04295d4a4cf1a30357b556f040593d971
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>